--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -10,7 +10,7 @@
     "radius": 2, 
     "projected": 1, 
     "epochs": 60, 
-    "tb_path": "/IRIF_AGD/testing_area_cl/IHT_AGD_CLUSTER/testOPT/no_tb",
+    "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
     "gamma0":1,
