--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,6 +1,6 @@
 {
     "experiment_number": 993,
-    "dataset": "MNIST", 
+    "dataset": "MNIST2", 
     "architecture": "ResNet18", 
     "batch_size": 256, 
     "optimizer": -3, 
