--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
     "dataset": "IMAGENET", 
-    "architecture": "ResNet101", 
+    "architecture": "ImageNetRN", 
     "batch_size": 256, 
     "optimizer": -3, 
     "lr": 0.1, 
