--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,15 +1,15 @@
 {
     "experiment_number": 993,
-    "dataset": "IMAGENET", 
-    "architecture": "ImageNetRN", 
+    "dataset": "CIFAR", 
+    "architecture": "ResNet18", 
     "batch_size": 256, 
-    "optimizer": -1, 
+    "optimizer": 0, 
     "lr": 0.1, 
-    "momentum": 0.0,
+    "momentum": 0.5,
     "weight_decay": 0.0,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 1, 
+    "epochs": 20, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
