--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,15 +1,15 @@
 {
     "experiment_number": 993,
-    "dataset": "MNIST", 
-    "architecture": "MNIST2", 
+    "dataset": "IMAGENET", 
+    "architecture": "ImageNetRN", 
     "batch_size": 256, 
-    "optimizer": -4, 
-    "lr": 0.3, 
+    "optimizer": 0, 
+    "lr": 0.1, 
     "momentum": 0.5,
     "weight_decay": 0.0,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 40, 
+    "epochs": 2, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
