--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -18,5 +18,7 @@
 
     "initial_accumulator_value":1,
     "beta":10.0,
-    "eps":0.01
+    "eps":0.01,
+    "kappa":10.0,
+    "sparsity":0.95
 }
