--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
-    "dataset": "IMAGENET", 
-    "architecture": "ImageNetRN", 
+    "dataset": "MNIST", 
+    "architecture": "MNIST2", 
     "batch_size": 256, 
     "optimizer": 0, 
     "lr": 0.1, 
@@ -9,7 +9,7 @@
     "weight_decay": 0.0,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 2, 
+    "epochs": 40, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
