--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,9 +1,9 @@
 {
     "experiment_number": 993,
-    "dataset": "CIFAR100", 
-    "architecture": "ImageNetRN", 
+    "dataset": "CIFAR", 
+    "architecture": "ResNet18", 
     "batch_size": 256, 
-    "optimizer": 0, 
+    "optimizer": -3, 
     "lr": 0.01, 
     "momentum": 0.5,
     "weight_decay": 0.0,
