--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,10 +1,10 @@
 {
     "experiment_number": 993,
-    "dataset": "CIFAR", 
-    "architecture": "ResNet18", 
+    "dataset": "IMAGENET", 
+    "architecture": "ImageNetRN", 
     "batch_size": 256, 
     "optimizer": 0, 
-    "lr": 0.01, 
+    "lr": 0.1, 
     "momentum": 0.5,
     "weight_decay": 0.0,
     "radius": 2, 
