--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
-    "dataset": "MNIST", 
-    "architecture": "MNIST2", 
+    "dataset": "IMAGENET", 
+    "architecture": "ImageNetRN", 
     "batch_size": 256, 
     "optimizer": 0, 
     "lr": 0.1, 
@@ -9,7 +9,7 @@
     "weight_decay": 0.0,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 60, 
+    "epochs": 10, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
@@ -20,5 +20,5 @@
     "beta":10.0,
     "eps":0.01,
     "kappa":3.00,
-    "sparsity":0.95
+    "sparsity":0.99
 }
