--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,10 +1,10 @@
 {
     "experiment_number": 993,
-    "dataset": "IMAGENET", 
-    "architecture": "ImageNetRN", 
+    "dataset": "CIFAR100", 
+    "architecture": "ResNet34", 
     "batch_size": 256, 
-    "optimizer": -3, 
-    "lr": 0.001, 
+    "optimizer": 3, 
+    "lr": 0.01, 
     "momentum": 0.9,
     "weight_decay": 0.0001,
     "radius": 2, 
