--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,9 +1,9 @@
 {
     "experiment_number": 993,
-    "dataset": "IMAGENET", 
-    "architecture": "ImageNetRN", 
+    "dataset": "CIFAR", 
+    "architecture": "CIFAR100RN", 
     "batch_size": 256, 
-    "optimizer": -3, 
+    "optimizer": 3, 
     "lr": 0.01, 
     "momentum": 0.9,
     "weight_decay": 0.0001,
