--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,15 +1,15 @@
 {
     "experiment_number": 993,
     "dataset": "CIFAR100", 
-    "architecture": "CIFAR100RN", 
+    "architecture": "ImageNetRN", 
     "batch_size": 256, 
-    "optimizer": -4, 
+    "optimizer": 3, 
     "lr": 0.001, 
     "momentum": 0.9,
     "weight_decay": 0.0001,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 60, 
+    "epochs": 120, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
@@ -20,5 +20,5 @@
     "beta":1000.0,
     "eps":0.01,
     "kappa":10.0,
-    "sparsity":0.95
+    "sparsity":0.80
 }
