--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,9 +1,9 @@
 {
     "experiment_number": 993,
-    "dataset": "CIFAR100", 
-    "architecture": "ImageNetRN", 
+    "dataset": "MNIST", 
+    "architecture": "MNIST2", 
     "batch_size": 256, 
-    "optimizer": -4, 
+    "optimizer": -3, 
     "lr": 0.1, 
     "momentum": 0.9,
     "weight_decay": 0.0005,
@@ -17,8 +17,8 @@
     "random_seed": 0,
 
     "initial_accumulator_value":1,
-    "beta":30.0,
+    "beta":10.0,
     "eps":0.01,
-    "kappa":100.0,
+    "kappa":10.0,
     "sparsity":0.80
 }
