--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,12 +1,12 @@
 {
     "experiment_number": 993,
     "dataset": "CIFAR100", 
-    "architecture": "ImageNetRN", 
+    "architecture": "CIFAR100RN", 
     "batch_size": 256, 
     "optimizer": 0, 
     "lr": 0.1, 
     "momentum": 0.9,
-    "weight_decay": 0.001,
+    "weight_decay": 0.002,
     "radius": 2, 
     "projected": 1, 
     "epochs": 200, 
