--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
     "dataset": "CIFAR100", 
-    "architecture": "WideResNet2810", 
+    "architecture": "CIFAR100RN", 
     "batch_size": 256, 
     "optimizer": 3, 
     "lr": 0.1, 
