--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
-    "dataset": "CIFAR", 
-    "architecture": "ResNet18", 
+    "dataset": "MNIST", 
+    "architecture": "MNIST2", 
     "batch_size": 64, 
     "optimizer": -3, 
     "lr": 0.01, 
@@ -9,7 +9,7 @@
     "weight_decay": 0.0005,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 60, 
+    "epochs": 20, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
@@ -17,7 +17,7 @@
     "random_seed": 0,
 
     "initial_accumulator_value":1,
-    "beta":30.0,
+    "beta":10.0,
     "eps":0.01,
     "kappa":10.0,
     "sparsity":0.98
