--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
     "dataset": "MNIST", 
-    "architecture": "MNIST2", 
+    "architecture": "MNIST2_LEAKY", 
     "batch_size": 64, 
     "optimizer": -3, 
     "lr": 0.01, 
