--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
-    "dataset": "CIFAR", 
-    "architecture": "ResNet18", 
+    "dataset": "MNIST", 
+    "architecture": "MNIST2", 
     "batch_size": 64, 
     "optimizer": -3, 
     "lr": 0.01, 
@@ -19,6 +19,6 @@
     "initial_accumulator_value":1,
     "beta":30.0,
     "eps":0.01,
-    "kappa":10.0,
+    "kappa":1.0,
     "sparsity":0.90
 }
