--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
-    "dataset": "MNIST", 
-    "architecture": "MNIST2", 
+    "dataset": "CIFAR", 
+    "architecture": "ResNet18", 
     "batch_size": 64, 
     "optimizer": -3, 
     "lr": 0.01, 
@@ -9,7 +9,7 @@
     "weight_decay": 0.0005,
     "radius": 2, 
     "projected": 1, 
-    "epochs": 20, 
+    "epochs": 60, 
     "tb_path": "./no_tb",
     "batch_statistics_freq": 100,
     "dump_movement": 0,
@@ -19,6 +19,6 @@
     "initial_accumulator_value":1,
     "beta":30.0,
     "eps":0.01,
-    "kappa":1.0,
-    "sparsity":0.99
+    "kappa":10.0,
+    "sparsity":0.95
 }
