--- a/testOPT/config.json
+++ b/testOPT/config.json
@@ -1,7 +1,7 @@
 {
     "experiment_number": 993,
     "dataset": "CIFAR", 
-    "architecture": "ResNet18", 
+    "architecture": "CIFAR10PRETRAIN", 
     "batch_size": 64, 
     "optimizer": -3, 
     "lr": 0.01, 
